--- a/ML.ipynb
+++ b/ML.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgmx/eG2J1ERlr5TpKSe6C",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPVNG2h9CONP4I3pO4Yan3l"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,23 +16,67 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "id": "96XLImqN08HL",
+        "outputId": "c8a9a22b-f918-4201-d4f5-0c8586a430f2"
       },
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'Hello' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-603720720.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mHello\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'Hello' is not defined"
+          ]
+        }
+      ],
       "source": [
-        "<a href=\"https://colab.research.google.com/github/GS1087/ML/blob/main/ML.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "Hello\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "1+1"
+      ],
       "metadata": {
-        "id": "96XLImqN08HL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QGvsFDVF5KLa",
+        "outputId": "ea014f90-7b29-45b5-ec35-b642cc2176a6"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "z5Lv44Gw5MYH"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
